--- a/styles/style.css
+++ b/styles/style.css
@@ -6,26 +6,401 @@
   /* выше установили ограничение по максимальной ширине */
   margin: 0 auto;
   /* выше для экранов больше 1600px отцентрировали весь контент */
-  font-family: 'Helvetica Neue', Arial, sans-serif;
+
+  font-family: 'Helvetica Neue', 'Arial', sans-serif; 
+
 }
 
 .header {
   height: 100vh;
   min-height: 600px;
   max-height: 756px;
+  border: 1px solid red;
+  display: flex;
+  position: relative;
+  margin: auto;
+  align-items: center;
+  justify-content: space-between;
+  background-color: #f2f2f2;
   /* выше установили ограничения для секции */
 }
 
-/* ниже мы привели пример двух селекторов, чтобы вы вспомнили запись элемента */
-.header__square-pic {
-  height: 568px;
-  width: 568px;
+.logo{
+  position: relative;
 }
 
-/* и элемента с модификатором вида ключ-значение */
-.table__cell_theme_dark {
-  width: 200px;
+.logo_place_header{
+  background-image: url('/images/logo_place_header.svg');
+  position: absolute;
+  z-index: 100;
+  top: 30px;
+  left: 64px;
+  width: 183px;
+  height: 32px;
+  border: 1px solid black;
+}
+
+.header__title{
+  display: flex;
+  align-items: center;
+  position: absolute;
+  left:64px;
+  width: 730px;
+  min-height: auto;
+  line-height: 96px;
+  font-size: 102px;  
+  font-weight: 700;
+  border: 1px solid purple;
+}
+
+.header__subtitle{
+  position: absolute;
+  min-height: auto;
+  width: 388px;
+  left: 64px;
+  bottom: 30px;
+  line-height: 25px;
+  font-size: 18px;
+  font-weight: normal;
+  border: 1px solid blue;
+}
+
+.header__link{
+  color: #2f80ed;
+  text-decoration: none;
+}
+
+.header__main-illustration{
+  background-image: url('/images/header-image.png');
+  background-size: cover;
+  position: absolute;
+  right: 0;
+  bottom: 0;
+  width: 765px;
+  height: 608px;
+  z-index: 1;
+  border: 1px solid burlywood;
+}
+/* ниже мы привели пример двух селекторов, чтобы вы вспомнили запись элемента */
+.header__square-pic {
+  position: absolute;
+  height: 568px;
+  width: 568px;
+  top: 64px;
+  right: 0;
+  z-index: 0;
+  background-color:  #2f80ed;
+}
+
+.description{
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  border: 1px solid red;
+}
+
+.two-columns{
+  margin-top: 100px;
+  border: 1px solid red;
+  min-height: auto;
+  width: 80%;
+  display: flex;
+  justify-content: space-between;
+}
+
+.two-columns__brief{
+  width: 175px;
+  min-height: auto;
+  margin: 0;
+  border: 1px solid burlywood;
+  line-height:  1.2;
+  font-size: 18px;
+  font-weight: normal;
+  color:  #2f80ed;
+}
+
+.two-columns__main-text{
+  width: 80%;
+  min-width: 784px;
+  border: 1px solid blue;
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+}
+
+.two-columns__paragraph{
+  width: 100%;
+  border: 1px solid black;
+  margin: 0;
+  line-height: 34px;
+  font-size: 24px;
+  font-weight: normal;
+}
+
+.two-columns__paragraph:nth-of-type(2n){
+  margin: 30px 0;
+} 
+.two-columns__span-accent{
+  line-height: 34px;
+  font-size: 24px;
+  font-weight: bold;
+}
+
+.digits{
+  border: 1px solid red;
+  display: flex;
+  align-items: center;
+  
+  flex-direction: column;
+  
+}
+
+.section-title{
+  border: 1px solid red;
+  margin-top: 100px;
+  margin-bottom: 20px;
+  width: 60%;
+  text-align: center;
+  min-height: auto;
+  line-height: 1.15;
+  font-size: 60px;
+  font-weight: bold;
+}
+
+.section-subtitle{
+  border: 1px solid red;
+  width: 60%;
+  min-height: auto;
+  text-align: center;
+  line-height: 34px;
+  font-size: 24px;
+  font-weight: normal;
+}
+
+.table{
+  width: 1100px;
+  min-height: auto;
+  border: 1px solid red;
+  display: flex;
+  flex-wrap: wrap;
+  margin-bottom: 100px;
+  justify-content: space-between;
+}
+
+.table__cell{
+  width: 250x;
+  margin-top: 60px;
+  border: 1px solid rgb(172, 167, 177);
+}
+
+.table__heading{
+  width: 250x;
+  border: 1px solid blue;
+  line-height: 1.15;
+  font-size: 24px;
+  font-weight: bold;
+}
+
+.table__text{
+  margin-top: 20px;
+  width: 250px;
+  border: 1px solid black;
+  line-height: 1.2;
+  font-size: 18px;
+  font-weight: normal;
+}
+
+.feynman{
+  height: 890px;
+  background-image: url(/images/feynman.png);
+  background-color:  #f2f2f2;
+  background-repeat: no-repeat;
+  background-position: left bottom;
+  background-size: 867px 647px;
+  display: flex; 
+  flex-direction: column;
+  align-items: center;
+  border: 1px solid red;
+  position: relative;
+}
+
+.feynman__title{
+  margin-top: 100px;
+  margin-bottom: 70px;
+  width: 648px;
+  text-align: center;
+  line-height: 1.15;
+  font-size: 120px;
+  font-weight: bold;
+  border: 1px solid red;
+}
+
+.feynman__subtitle{
+  text-align: center;
+  line-height: 51px;
+  font-size: 36px;
+  font-weight: normal;
+  border: 1px solid red;
+}
+
+.feynman__link{
+  position: absolute;
+  top: 50%;
+  right: 48px;
+  border: 1px solid red;
+  color: #2f80ed;
+  line-height: 51px;
+  font-size: 36px;
+  font-weight: normal;
+}
+
+.kaufman{
+  min-height: auto;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  border: 1px solid red;
+  background-color: black;
+  position: relative;
+  overflow: hidden
+}
+
+.section-title_theme_dark{
+  margin-top: 90px;
   color: white;
+}
+
+.section-subtitle_theme_dark{
+  color: white;
+  
+}
+
+.table_theme_dark{
+  min-width: auto;
+  margin: 0 auto 90px;
+
+}
+
+.table__cell_theme_dark{
+  width: 200px;
   margin-right: 0;
   margin-top: 80px;
+  border: 1px solid rgb(106, 76, 136);
+  color: white;
+  z-index: 1;
+}
+
+.table__text_theme_dark{
+  width: 200px;
+  border: 1px solid red;
+}
+
+.kaufman__triangle{
+  background-image: url(/images/kaufman-triangle.svg);
+  background-size: cover;
+  width: 877px;
+  height: 877px;
+  position: absolute;
+  right: -210px;
+  top: 0;
+  z-index: 0;
+}
+
+.footer{
+  min-height: 350px;
+  border: 1px solid red;
+  display: flex;
+  flex-direction: column;
+  justify-content: stretch;
+  background-color: black;
+}
+
+.footer__columns{
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  width: 90%;
+  margin: 60px auto 40px;
+  min-height: 100%;
+  border: 1px solid red;
+  flex-grow: 3;
+}
+
+.footer__column_content_copyright{
+  flex-basis: 711px;
+  position: relative;
+  border: 1px solid red;
+  
+}
+
+.footer__column_content_info{
+  border: 1px solid red;
+}
+
+.footer__column_content_social{
+  border: 1px solid red;
+}
+
+.logo_another_header{
+  width: 183px;
+  height: 35px;
+  background-image: url('/images/logo_place_footer.svg');
+  position: absolute;
+  z-index: 100;
+  top: 0;
+  left: 0;
+  border: 1px solid black;
+}
+
+.footer__author{
+  position: absolute;
+  bottom: 18px;
+  margin-top: 18px;
+  border: 1px solid red;
+  line-height: 25px;
+  font-size: 18px;
+  font-weight: normal;
+  color: white;
+}
+
+.footer__column-heading{
+  border: 1px solid red;
+  line-height: 30px;
+  font-size: 18px;
+  font-weight: bold;
+  color: white;
+}
+
+.footer__column-links{
+  margin-top: 20px;
+  margin-bottom: 16px;
+  border: 1px solid red;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+}
+
+.footer__column-link{
+  line-height: 30px;
+  font-size: 18px;
+  font-weight: normal;
+  min-height: auto;
+  border: 1px solid red;
+  text-decoration: none;
+  color: white;
+  display: flex;
+  align-items: center;
+}
+/*
+.footer__column-link:nth-of-type(3n){
+  margin-bottom: 0;
+}
+*/
+.footer__social-icon{
+  width: 16px;
+  height: 16px;
+  z-index: 120;
+  border: 1px solid red;
+  padding-right: 10px;
 }
