--- a/styles/style.css
+++ b/styles/style.css
@@ -46,7 +46,7 @@
   width: 730px;
   min-height: auto;
   line-height: 96px;
-  font-size: 102px;  
+  font-size: 102px;
   font-weight: 700;
 }
 
@@ -176,12 +176,12 @@
 }
 
 .table__cell{
-  width: 250x;
+  width: 250px;
   margin-top: 60px;
 }
 
 .table__heading{
-  width: 250x;
+  width: 250px;
   line-height: 1.15;
   font-size: 24px;
   font-weight: bold;
@@ -202,7 +202,7 @@
   background-repeat: no-repeat;
   background-position: left bottom;
   background-size: 867px 647px;
-  display: flex; 
+  display: flex;
   flex-direction: column;
   align-items: center;
   position: relative;
@@ -243,7 +243,7 @@
   align-items: center;
   background-color: black;
   position: relative;
-  overflow: hidden
+  overflow: hidden;
 }
 
 .section-title_theme_dark{
