--- a/styles/style.css
+++ b/styles/style.css
@@ -29,7 +29,7 @@
 }
 
 .logo_place_header{
-  background-image: url('/images/logo_place_header.svg');
+  background-image: url('../images/logo_place_header.svg');
   position: absolute;
   z-index: 100;
   top: 30px;
@@ -67,7 +67,7 @@
 }
 
 .header__main-illustration{
-  background-image: url('/images/header-image.png');
+  background-image: url('../images/header-image.png');
   background-size: cover;
   position: absolute;
   right: 0;
@@ -141,8 +141,7 @@
 .digits{
   display: flex;
   align-items: center;
-  flex-direction: column;
-  
+  flex-direction: column;  
 }
 
 .section-title{
@@ -196,7 +195,7 @@
 
 .feynman{
   height: 890px;
-  background-image: url(/images/feynman.png);
+  background-image: url('../images/feynman.png');
   background-color:  #f2f2f2;
   background-repeat: no-repeat;
   background-position: left bottom;
@@ -274,7 +273,7 @@
 }
 
 .kaufman__triangle{
-  background-image: url(/images/kaufman-triangle.svg);
+  background-image: url('../images/kaufman-triangle.svg');
   background-size: cover;
   width: 877px;
   height: 877px;
@@ -318,7 +317,7 @@
 .logo_another_header{
   width: 183px;
   height: 35px;
-  background-image: url('/images/logo_place_footer.svg');
+  background-image: url('../images/logo_place_footer.svg');
   position: absolute;
   z-index: 100;
   top: 0;
