--- a/styles/style.css
+++ b/styles/style.css
@@ -141,7 +141,8 @@
 .digits{
   display: flex;
   align-items: center;
-  flex-direction: column;  
+  flex-direction: column;
+  padding-bottom: 100px;
 }
 
 .section-title{
@@ -169,19 +170,15 @@
   width: 1100px;
   display: flex;
   flex-wrap: wrap;
-  margin-bottom: 100px;
   justify-content: space-between;
+  list-style-type: none;
+  margin: 0;
+  padding: 0;
 }
 
 .table__cell{
   width: 250px;
   margin-top: 60px;
-}
-
-ul{
-  margin: 0;
-  padding: 0;
-  list-style-type: none;
 }
 
 .table__heading{
@@ -247,7 +244,7 @@ ul{
   display: flex;
   flex-direction: column;
   align-items: center;
-  background-color:  #000000;
+  background-color:  #1f1f1f;
   position: relative;
   overflow: hidden;
 }
@@ -296,7 +293,7 @@ ul{
   display: flex;
   flex-direction: row;
   justify-content: stretch;
-  background-color:  #000000;
+  background-color:  #1f1f1f;
 }
 
 .footer__columns{
