--- a/pages/index.css
+++ b/pages/index.css
@@ -1,4 +1,4 @@
-@import url("../root/normalize.css");
+@import url("../vendor/normalize.css");
 @import url("../blocks/page/page.css");
 @import url("../blocks/description/description.css");
 @import url("../blocks/header/header.css");
@@ -38,6 +38,8 @@
 @import url("../blocks/footer/__columns/footer__columns.css");
 @import url("../blocks/footer/__column/footer__column.css");
 @import url("../blocks/footer/__column/_content/footer__column_content_copyright.css");
+@import url("../blocks/footer/__column/_content/footer__column_content_info.css");
+@import url("../blocks/footer/__column/_content/footer__column_content_social.css");
 @import url("../blocks/footer/__column-links/footer__column-links.css");
 @import url("../blocks/footer/__column-link/footer__column-link.css");
 @import url("../blocks/footer/__column-heading/footer__column-heading.css");
