--- a/blocks/cards/__image/cards__image.css
+++ b/blocks/cards/__image/cards__image.css
@@ -1,5 +1,9 @@
 .cards__image{
   width: 160px;
   height: 160px;
-  padding: 60px 40px 43px;
+  margin: 60px 40px 43px;
+  border-radius: 50%;
+  -moz-border-radius: 50%;
+  -webkit-border-radius: 50%;
+  -khtml-border-radius: 50%;
 }
