--- a/blocks/video/__iframe/video__iframe.css
+++ b/blocks/video/__iframe/video__iframe.css
@@ -1,3 +1,10 @@
+.video__iframe{
+  border: 0;
+  width: 515px;;
+  height: 316px;
+  margin-left: 0;
+}
+
 .video__iframe:nth-of-type(2){
   margin-left: 20px;
 }
